# MultiSquare

./: .gitignore  CMakeLists.txt  README.md
MultiSquareServer/: CMakeLists.txt
MultiSquareServer/include/: networking.h
MultiSquareServer/src/: main.cpp
MultiSquaresClient/: CMakeLists.txt  app.aps
MultiSquaresClient/include/gameLayer/: Bullet.h  Player.h  gameLayer.h  tiledRenderer.cpp  tiledRenderer.h
MultiSquaresClient/src/gameLayer/: Bullet.cpp  Player.cpp  gameLayer.cpp  renderer.cpp  tiledRenderer.cpp
client/: Bullet.cpp
client/include/: Networker.h  gameLayer.h  renderer.h
client/include/platform/: platformTools.h
client/platform/src/: glfwMain.cpp
client/src/: Networker.cpp  gameLayer.cpp  renderer.cpp
client/src/platform/: glfwMain.cpp  otherPlatformFunctions.cpp  platformInput.cpp
common/include/: Bullet.h  MapData.h  Packet.h  Player.h
common/resources/: TestTileset.tsx
common/resources/maps/: TestMap.csv
common/src/: Bullet.cpp  MapData.cpp  Packet.cpp  Player.cpp
include/gameLayer/: Bullet.h
server/: server.cpp  server.h
server/include/: server.h
server/src/: server.cpp
